--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://dev.cstoucflgsgq.us-west-2.rds.amazonaws.com:3306/UserFeatures
 spring.datasource.username=root
 spring.datasource.password=cancercant
+server.port=8085
